force-app/main/default/objects/Quad_Meeting__c/fields/Tax_Loss_Harvesting_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Loss_Harvesting_Completed__c</fullName>
    <description>Date tax loss harvesting opportunities were identified and executed.</description>
    <inlineHelpText>Date tax loss harvesting opportunities were identified and executed.</inlineHelpText>
    <label>Tax Loss Harvesting Completed</label>
    <type>Date</type>
</CustomField>