force-app/main/default/objects/Quad_Meeting__c/fields/Tax_Loss_Selling__c.field-meta.xml
<CustomField>
    <fullName>Tax_Loss_Selling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reviewed tax loss selling (if applicable)</inlineHelpText>
    <label>Tax Loss Selling</label>
    <type>Checkbox</type>
</CustomField>