force-app/main/default/objects/Quad_Meeting__c/fields/Tax_Outlook_Discussion_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Outlook_Discussion_Completed__c</fullName>
    <description>Date discussion of upcoming year&apos;s tax law changes and strategy adjustments was held.</description>
    <inlineHelpText>Date discussion of upcoming year&apos;s tax law changes and strategy adjustments was held.</inlineHelpText>
    <label>Tax Outlook Discussion Completed</label>
    <type>Date</type>
</CustomField>