force-app/main/default/objects/Quad_Meeting__c/fields/Tax_Sheltered_Investment_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Tax_Sheltered_Investment_Review_Complete__c</fullName>
    <description>Date tax-advantaged investment opportunities were reviewed and implemented.</description>
    <inlineHelpText>Date tax-advantaged investment opportunities were reviewed and implemented.</inlineHelpText>
    <label>Tax-Sheltered Investment Review Complete</label>
    <type>Date</type>
</CustomField>