force-app/main/default/objects/Quad_Meeting__c/fields/Trustee_Designations_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Designations_Reviewed__c</fullName>
    <description>Date all trustee appointments were reviewed for appropriateness.</description>
    <inlineHelpText>Date all trustee appointments were reviewed for appropriateness.</inlineHelpText>
    <label>Trustee Designations Reviewed</label>
    <type>Date</type>
</CustomField>