force-app/main/default/objects/Quad_Meeting__c/fields/Verbal_Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Completion_Notes__c</fullName>
    <description>Required on verbal override</description>
    <label>Verbal Completion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>