force-app/main/default/objects/Quad_Meeting__c/fields/Wills_Trusts_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Wills_Trusts_Review_Completed__c</fullName>
    <description>Date all wills and trust documents were reviewed for currency and accuracy.</description>
    <inlineHelpText>Date all wills and trust documents were reviewed for currency and accuracy.</inlineHelpText>
    <label>Wills &amp; Trusts Review Completed</label>
    <type>Date</type>
</CustomField>