force-app/main/default/objects/Quad_Meeting__c/fields/X1031_1035_Exchange_Strategy_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>X1031_1035_Exchange_Strategy_Reviewed__c</fullName>
    <description>Date that 1031 (real estate) and 1035 (insurance) exchange strategies were reviewed.</description>
    <inlineHelpText>Date that 1031 (real estate) and 1035 (insurance) exchange strategies were reviewed.</inlineHelpText>
    <label>1031/1035 Exchange Strategy Reviewed</label>
    <type>Date</type>
</CustomField>