force-app/main/default/objects/Quad_Meeting__c/recordTypes/B_Segment_1H.recordType-meta.xml
<RecordType>
    <fullName>B_Segment_1H</fullName>
    <active>true</active>
    <label>B-Segment 1H</label>
</RecordType>