force-app/main/default/objects/Quad_Meeting__c/recordTypes/B_Segment_2H.recordType-meta.xml
<RecordType>
    <fullName>B_Segment_2H</fullName>
    <active>true</active>
    <label>B-Segment 2H</label>
</RecordType>