force-app/main/default/objects/Quad_Meeting__c/recordTypes/C_Segment.recordType-meta.xml
<RecordType>
    <fullName>C_Segment</fullName>
    <active>true</active>
    <label>C-Segment</label>
</RecordType>