force-app/main/default/objects/Quad_Meeting__c/recordTypes/Cash_Flow.recordType-meta.xml
<RecordType>
    <fullName>Cash_Flow</fullName>
    <active>true</active>
    <label>Cash Flow</label>
</RecordType>