force-app/main/default/objects/Quad_Meeting__c/recordTypes/Estate_Planning.recordType-meta.xml
<RecordType>
    <fullName>Estate_Planning</fullName>
    <active>true</active>
    <label>Estate Planning</label>
</RecordType>