force-app/main/default/objects/Quad_Meeting__c/recordTypes/Introductory_Quad.recordType-meta.xml
<RecordType>
    <fullName>Introductory_Quad</fullName>
    <active>true</active>
    <label>Introductory Quad</label>
</RecordType>