force-app/main/default/objects/Quad_Meeting__c/recordTypes/Risk_Management.recordType-meta.xml
<RecordType>
    <fullName>Risk_Management</fullName>
    <active>true</active>
    <label>Risk Management</label>
</RecordType>