force-app/main/default/objects/Quad_Meeting__c/recordTypes/Tax_Planning.recordType-meta.xml
<RecordType>
    <fullName>Tax_Planning</fullName>
    <active>true</active>
    <label>Tax Planning</label>
</RecordType>