force-app/main/default/objects/Quad_Meeting__c/validationRules/Lock_Quad_When_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Quad_When_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Meeting_Status__c), &quot;Complete&quot;),
    NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot edit this record after the Quad Status is Complete.</errorMessage>
</ValidationRule>