force-app/main/default/objects/Quad_Meeting__c/validationRules/Prevent_Edit_On_Archived_Quad_Meeting.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_On_Archived_Quad_Meeting</fullName>
    <active>true</active>
    <description>Prevents any user (except System Administrator) from editing a Quad Meeting record once its Meeting_Status__c has been set to Archived.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Meeting_Status__c), &apos;Archived&apos;),
    NOT(ISNEW()),
    $Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>This Quad Meeting has been Archived and can no longer be edited. Please contact your System Administrator if a change is required.</errorMessage>
</ValidationRule>