force-app/main/default/objects/Quad_Meeting__c/validationRules/Require_IncompleteReason_On_Archived.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_IncompleteReason_On_Archived</fullName>
    <active>true</active>
    <description>When a user manually sets Meeting_Status__c to &apos;Archived&apos;, they must provide an Incomplete Reason.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Meeting_Status__c, &apos;Archived&apos;),
    ISCHANGED(Meeting_Status__c),
    ISPICKVAL(Incomplete_Reason__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Incomplete_Reason__c</errorDisplayField>
    <errorMessage>An Incomplete Reason is required when archiving a Quad Meeting.</errorMessage>
</ValidationRule>