force-app/main/default/objects/Quad_Meeting__c/validationRules/Verbal_Completion_Requires_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Verbal_Completion_Requires_Notes</fullName>
    <active>true</active>
    <description>This enforces the required notes when marking Completed Verbally.</description>
    <errorConditionFormula>AND(
  Questionnaire_Completed_Verbally__c = TRUE,
  ISBLANK(Verbal_Completion_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Verbal_Completion_Notes__c</errorDisplayField>
    <errorMessage>Verbal Completion Notes are required when marking the questionnaire as Completed Verbally.</errorMessage>
</ValidationRule>