force-app/main/default/objects/Quad_Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Status__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Target_Meeting_Date__c</columns>
    <columns>OwnerId__c</columns>
    <columns>Agenda_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>