force-app/main/default/objects/Quad_Meeting__c/listViews/AWM_Team_Quad_Meeting.listView-meta.xml
<ListView>
    <fullName>AWM_Team_Quad_Meeting</fullName>
    <filterScope>Queue</filterScope>
    <label>AWM Team</label>
    <queue>AWM_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>