force-app/main/default/objects/Quad_Meeting__c/listViews/MWM_Team_Quad_Meeting.listView-meta.xml
<ListView>
    <fullName>MWM_Team_Quad_Meeting</fullName>
    <filterScope>Queue</filterScope>
    <label>MWM Team</label>
    <queue>MWM_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>