force-app/main/default/objects/Quad_Meeting__c/listViews/My_Open_Quads.listView-meta.xml
<ListView>
    <fullName>My_Open_Quads</fullName>
    <columns>Client_Account__c</columns>
    <columns>NAME</columns>
    <columns>Meeting_Status__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Meeting_Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Archived</value>
    </filters>
    <label>My Open Quads</label>
</ListView>