force-app/main/default/objects/Quad_Meeting__c/listViews/My_Overdue_Quads.listView-meta.xml
<ListView>
    <fullName>My_Overdue_Quads</fullName>
    <columns>Client_Account__c</columns>
    <columns>NAME</columns>
    <columns>Meeting_Status__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Meeting_Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>My Overdue Quads</label>
</ListView>