force-app/main/default/objects/Quad_Meeting__c/listViews/This_Quarter_s_Quad.listView-meta.xml
<ListView>
    <fullName>This_Quarter_s_Quad</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <label>This Quarter&apos;s Quad</label>
</ListView>